Minor MS changes here and bib edits.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -9137,6 +9137,25 @@ Resampling},
 	pages = {201019140}
 }
 
+
+@article{knauft_violence_1991,
+	title = {Violence and {Sociality} in {Human} {Evolution} [and {Comments} and {Replies}]},
+	volume = {32},
+	issn = {0011-3204},
+	doi = {10.1086/203975},
+	abstract = {Patterns of violence \& sociality found in simple human societies are compared to those documented among the four great-ape species \& the more complex prestate or middle-range human societies with regard to: food/resource sharing, dominance structure, male (M) competition for sexual access to females, \& violence \& intergroup competition. Results indicate that simple human societies exhibit a relative absence of competitive M dominance hierarchies \& of systemic violence between closed social groups, \& are more egalitarian among adult Ms politically, sexually, \& in resource sharing. A U-shaped evolutionary trajectory of selected features of human violence is proposed. It appears that simple human societies constitute a major anomaly for models suggesting evolutionary similarity between great-ape \& prestate human patterns of violence, without addressing the group-selection potential of symbolic transmission. It is urged that more consideration be given to cultural capacities in interaction with ecological constraints \& biogenetic selection in studying the evolution of human sociality \& violence. Comments are offered by: Thomas S. Abler (U of Waterloo, Ontario); Laura Betzig (U of Michigan, Ann Arbor); Christopher Boehm (Northern Kentucky U, Highland Heights); Robert Knox Dentan (State U of New York at Buffalo, Amherst); Thomas M. Kiefer (18 Worthington St, Boston, Mass); Keith F. Otterbein (State U of New York, Buffalo); John Paddock (Apt 464, 68000 Oaxaca, Mexico); \& Lars Rodseth (U of Michigan, Ann Arbor). In Reply, Knauft refutes specific criticisms, expands on several suggested viewpoints, offers additional insights on informal conflict mediation techniques, \& elaborates the purpose of the study. 457 References. Adapted from the source document.},
+	language = {eng},
+	number = {4},
+	journal = {Current Anthropology},
+	author = {Knauft, Bruce M. and Abler, Thomas S. and Betzig, Laura and Boehm, Christopher and Dentan, Robert Knox and Kiefer, Thomas M. and Otterbein, Keith F. and Paddock, John and Rodseth, Lars},
+	month = aug,
+	year = {1991},
+	keywords = {Violence ; Sociability ; Primates ; Intergroup Relations ; Interpersonal Relations ; Evolution ; Studies in Violence; Studies in Violence ; Article ; Violence/Sociality Patterns, Human Vs Ape Societies ; Article/Comments/Reply;},
+	pages = {391--428},
+	file = {Knauft et al. - 1991 - Violence and Sociality in Human Evolution [and Com.pdf:/Users/zgarf/Zotero/storage/CVIZBH5A/Knauft et al. - 1991 - Violence and Sociality in Human Evolution [and Com.pdf:application/pdf}
+}
+
+
 @article{nave_brains_2018,
 author = {Gideon Nave and Wi Hoon Jung and Richard Karlsson Linnér and Joseph W. Kable and Philipp D. Koellinger},
 title ={Are Bigger Brains Smarter? Evidence From a Large-Scale Preregistered Study},
