Adding ethnographic examples in discussion. Edits in discussion section.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -2076,6 +2076,31 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 }
 
 
+@article{glowacki_formation_2016,
+	title = {Formation of raiding parties for intergroup violence is mediated by social network structure},
+	volume = {113},
+	number = {43},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Glowacki, Luke and Isakov, Alexander and Wrangham, Richard W. and McDermott, Rose and Fowler, James H. and Christakis, Nicholas A.},
+	year = {2016},
+	keywords = {Jepson, Leadership, Warfare, collective action},
+	pages = {12114--12119},
+	annote = {The following values have no corresponding Zotero field:publisher: National Acad Sciencesissn: coden: doi: citation-id: Glowacki 2016modified-date: 2017-12-21 17:01:08 +0700},
+	file = {Formation%20of%20raiding%20parties%20f:/Users/zgarf/Zotero/storage/BNXTJ3HJ/Formation of raiding parties f.pdf:application/pdf}
+}
+
+@article{de_cremer_intergroup_2002,
+	title = {Intergroup and intragroup aspects of leadership in social dilemmas: {A} relational model of cooperation},
+	volume = {38},
+	journal = {Journal of Experimental Social Psychology},
+	author = {De Cremer, David and Van Vugt, Mark},
+	year = {2002},
+	keywords = {prelims, Leadership},
+	pages = {126--136},
+	annote = {The following values have no corresponding Zotero field:number: 2publisher: Elsevierissn: coden: doi: citation-id: DeCremer 2002modified-date: 2017-04-06 21:02:43 +0700},
+	file = {Intergroup%20and%20intragroup%20aspe:/Users/zgarf/Zotero/storage/YBAXJ8VL/Intergroup and intragroup aspe.pdf:application/pdf}
+}
+
 @article{walker_living_2012,
 	title = {Living with kin in lowland horticultural societies},
 	volume = {54},
@@ -3733,6 +3758,20 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	year = {1990},
 	keywords = {ANTH 562, Evolutionary Theory, Human Behavioral Ecology, MA\_leadership, Mate choice, Mate Choice},
 	pages = {255--264}
+}
+
+
+
+@article{mattison_evolution_2016,
+	title = {The evolution of inequality},
+	volume = {25},
+	journal = {Evolutionary Anthropology: Issues, News, and Reviews},
+	author = {Mattison, Siobhán M. and Smith, Eric A. and Shenk, Mary K. and Cochrane, Ethan E.},
+	year = {2016},
+	keywords = {Status, leaderhsip, Inequality},
+	pages = {184--199},
+	annote = {The following values have no corresponding Zotero field:number: 4publisher: Wiley Online Libraryissn: coden: doi: citation-id: Mattison 2016modified-date: 2017-04-06 21:02:47 +0700},
+	file = {The%20evolution%20of%20inequality:/Users/zgarf/Zotero/storage/WMRQ4MIK/The evolution of inequality.pdf:application/pdf}
 }
 
 @article{bowles_emergence_2010,
@@ -7695,6 +7734,16 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	pages = {68--85}
 }
 
+
+@book{rigby_persistent_1985,
+	title = {Persistent pastoralists},
+	isbn = {978-0-86232-227-4},
+	language = {English},
+	author = {Rigby, P},
+	year = {1985},
+	note = {OCLC: 605979240}
+}
+
 @article{van_vugt_many_2015,
 	title = {The many faces of leadership: an evolutionary-psychology approach},
 	volume = {24},
@@ -7716,6 +7765,32 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	keywords = {NSF1, SCCS},
 	pages = {329--369}
 }
+
+
+@article{ember_warfare_1992,
+	title = {Warfare, aggression, and resource problems: {Cross}-cultural codes},
+	volume = {26},
+	issn = {1069-3971},
+	journal = {Cross-Cultural Research},
+	author = {Ember, C. R. and Ember, M.},
+	year = {1992},
+	keywords = {Egalitarianism, Zach's UCARE 1, Warfare, SCCS},
+	pages = {169},
+	annote = {The following values have no corresponding Zotero field:number: 1-4publisher: Sage Publicationsissn: 1069-3971coden: doi: citation-id: Ember 1992modified-date: 2017-08-24 09:29:38 +0700},
+	file = {Warfare,%20aggression,%20and%20resou:/Users/zgarf/Zotero/storage/9SZXJYU5/Warfare, aggression, and resou.pdf:application/pdf}
+}
+
+@book{kelly_foraging_2013,
+	edition = {2nd ed.},
+	title = {The foraging spectrum: {Diversity} in hunter-gatherer lifeways},
+	publisher = {Smithsonian Inst Pr},
+	author = {Kelly, R. L.},
+	year = {2013},
+	keywords = {Diet and Nutrtion, ANTH 477, Hunters and Gatherers, prelims, Zach Nutrition Paper},
+	annote = {The following values have no corresponding Zotero field:issn: coden: doi: electronic-resource-num: citation-id: Kelly 2013modified-date: 2017-02-06 02:18:57 +0700},
+	file = {The%20foraging%20spectrum%20Diversi:/Users/zgarf/Zotero/storage/V545RX5Y/The foraging spectrum Diversi.pdf:application/pdf}
+}
+
 
 @book{murdock_outline_2008,
 	address = {New Haven},
@@ -9789,6 +9864,19 @@ doi = {10.1177/0956797618808470}
   pages={1293--1298},
   year={2009},
   publisher={American Association for the Advancement of Science}
+}
+
+
+@article{wild_making_2019,
+	title = {Making {Pastoralists} {Count}: {Geospatial} {Methods} for the {Health} {Surveillance} of {Nomadic} {Populations}},
+	url = {http://biorxiv.org/content/early/2019/03/15/572685.abstract},
+	doi = {10.1101/572685},
+	abstract = {Nomadic pastoralists are among the world’s hardest-to-reach and least-served populations. Pastoralist communities are notoriously difficult to capture in household surveys due to factors including their high degree of mobility, the remote terrain they inhabit, fluid domestic arrangements, and cultural barriers. Most surveys utilize census-based sampling frames which do not accurately capture the demographic and health parameters of nomadic populations. As a result, pastoralists are largely “invisible” in population data such as the Demographic and Health Surveys (DHS). By combining remote sensing and geospatial analysis, we developed an alternative sampling strategy designed to capture the current distribution of nomadic populations. We then implemented this sampling frame to survey a population of mobile pastoralists in southwest Ethiopia, focusing on maternal and child health (MCH) indicators. Using standardized instruments from DHS questionnaires, we assessed the MCH status of this population in order to draw comparisons with regional and national data. We find substantial disparities between our data collected using a geospatial sampling frame and regional DHS data in core MCH indicators including vaccination coverage, skilled birth attendance, and nutritional status. Census-based measures do not adequately capture population-level characteristics, risking substantial misreporting of the health status of mobile populations. Our study is the first to employ a geospatial survey of a nomadic group at the population level, and our field validation demonstrates that this methodology is a logistically feasible alternative to conventional sampling frames. Geospatial sampling methods open up cost-affordable and logistically feasible strategies for sampling pastoralists and other mobile populations, which is a crucial first step towards reaching these underserved groups with health services.},
+	journal = {bioRxiv},
+	author = {Wild, Hannah and Glowacki, Luke and Maples, Stace and Mejía-Guevara, Iván and Krystosik, Amy and Bonds, Matthew H. and Hiruy, Abiy and LaBeaud, A. Desiree and Barry, Michele},
+	month = jan,
+	year = {2019},
+	pages = {572685}
 }
 
 @article{kramer2010cooperative,
