Added more ethnographic examples in discussion section.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -7041,6 +7041,186 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	pages = {383--398}
 }
 
+
+@book{sq19-018,
+	address = {Austin},
+	title = {Wanano indians of the brazilian amazon: {A} sense of space},
+	isbn = {0-292-78522-4},
+	url = {https://ehrafworldcultures.yale.edu/document?id=sq19-018},
+	abstract = {This work is a study of the Wanano Indians, a Native American society located in the Uaupés River Basin in the northwest Amazon of Brazil. This group is characterized by a distinct language, name, ancestral history, rigidly bounded descent groups, and ascribed social statuses. In Wanano terms these amount to vertical and horizontal 'placements', and it is in this latter aspect – the system of placement or rank – upon which this book focuses (p. 1). In addition to the author's two theoretical models by means of which she attempts to explain ranked society, this document contains an abundance of data on the political significance of intergroup marriage, European-Indian contacts, the effects of missionization on Wanano society, social organization, kinship, songs, ecology, the economy, and inter-sib conflicts.},
+	language = {English},
+	publisher = {University of Texas Press},
+	author = {Chernela, Janet Marion},
+	year = {1993},
+	keywords = {Status, History, Real property, Kinship terminology, Clans, Gift giving, and prestige, role, Linguistic identification, Tukano, Tukano Indians},
+	annote = {Accessed on: 2019-12-03},
+	annote = {from library; copied 7/96; pages: 205; to analyst-JB-7/8/96; analysis completed 11/21/96; 195 text pages},
+	annote = {Includes bibliographical references (p. 167-175) and index},
+	annote = {Janet M. Chernela}
+}
+
+@article{fo04-001,
+	title = {Mbuti pygmies: an ethnographic survey},
+	url = {https://ehrafworldcultures.yale.edu/document?id=fo04-001},
+	abstract = {Originally presented as a thesis in 1956, this publication was supplemented and revised as a result of Turnbull's 1957-58 field experience. In one major respect it is a valuable addition to Turnbull's existing corpus of work: it offers extensive comparison of net-hunters, on whom Turnbull has concentrated, with the archer Mbuti, Schebesta's prime source.},
+	language = {English},
+	number = {no. 50},
+	author = {Turnbull, Colin M.},
+	year = {1965},
+	note = {tex.address: New York
+tex.publisher: American Museum of Natural History},
+	keywords = {Bambute, Culture summary, Mbuti},
+	pages = {139--282 , plates},
+	annote = {Accessed on: 2019-12-03},
+	annote = {Bibliography: p. 277},
+	annote = {Colin M. Turnbull}
+}
+
+
+@article{nm09-056,
+	title = {Iroquois and the new deal},
+	url = {https://ehrafworldcultures.yale.edu/document?id=nm09-056},
+	abstract = {This work is a comprehensive study of the New Deal and its effects on the Iroquois of New York, Oklahoma, Wisconsin, and Canada. Much of the data in this document relate to the period in which John Collier served as Commissioner of Indian Affairs (ca. 1933-1941), and his many legislative achievements in promoting the welfare of Native Americans. How these achievements were implemented on behalf of the Iroquois is the primary subject matter of this book. Topics given particular attention in the text are: the Iroquois concept of sovereignty, the Indian Reorganization Act of 1934, tribal reorganization and the Indian New Deal among the Oneida of Wisconsin and the Seneca-Cayugas of Oklahoma, community action programs among the New York Seneca and Mohawk (e.g., National Youth Administration Project, and the Civilian Conservation Corps - Indian Division, the Seneca Arts Project), and the Oneida (Wisconsin) Language and Folklore project. Scattered throughout the book are brief biographical sketches of individuals who played a significant part in instituting various programs for the Iroquois – Alice Lee Jemison, John Collier, William Fenton, and Arthur C. Parker.},
+	language = {English},
+	author = {Hauptman, Laurence M.},
+	year = {1981},
+	note = {tex.address: Syracuse, N.Y.
+tex.isbn: 0815622473
+tex.publisher: Syracuse University Press},
+	keywords = {Legal norms, Public welfare, External relations, Iroquois, Iroquois Indians, Public assistance, Public education, Public works},
+	pages = {xviii, 256},
+	annote = {Accessed on: 2019-12-03},
+	annote = {Includes bibliographical references (p. [229]-248) and index},
+	annote = {Laurence M. Hauptman},
+	annote = {to xerox 3/24/94 ; to analysis 4/5/94 (274 text p.); analysis completed 9/1/94 (267 text p.)}
+}
+
+@book{es10-003,
+	address = {Edinburgh},
+	title = {Isle of lewis and harris: {A} study in british community},
+	url = {https://ehrafworldcultures.yale.edu/document?id=es10-003},
+	abstract = {Geddes presents a survey of the changing physical-environmental and cultural systems on the island of Lewis and Harris from the 17th century to 1952. Based upon clerical and documented histories (including census records), some scant archeological records (prior to the 17th century), and his own survey work between 1919 and 1952, Geddes describes and interprets the Gaelic economic, societal, political and religious organization, as well as the 'clan spirit' (an underlying theme), in terms of adaptation to a highly variable and rugged environment. Detailed descriptions of crofting (the tenant farming system of land tenure), small-scale fishing, fishing industries, kelp-making, home weaving and the tweed industry, the primary economic ativities on the island, are presented and compared through time for the several different overlordships that directed the community.},
+	language = {English},
+	publisher = {At the University Press},
+	author = {Geddes, Arthur},
+	year = {1955},
+	keywords = {Geography, Family, History, Community structure, Settlement patterns, Sociocultural trends, Real property, Tillage, Culture summary, Dwellings, Domesticated animals, Ecclesiastical organization, Exchange and transfers, Fishing, Highland Scots, Highlands (Scotland), Religious intolerance and martyrs},
+	annote = {Accessed on: 2019-12-03},
+	annote = {[by] Arthur Geddes},
+	annote = {Includes bibliography and index}
+}
+
+@article{ol06-037,
+	title = {Chieftainship, kula and trade in massim prehistory},
+	url = {https://ehrafworldcultures.yale.edu/document?id=ol06-037},
+	abstract = {This article consists of three parts. The first of these deals with '…a spatial analysis of ethnographic data from the Trobriand Islands and advances another theory on the origins of chieftainship' (p. 29). Part two describes locational factors within the Kula network, which Irwin believes will throw light on its evolution and development. The third part discusses the emergence of the Kula in the broader context of trade and economic development in the general Massim area.},
+	language = {English},
+	author = {Irwin, Geoffrey J.},
+	year = {1983},
+	note = {tex.address: Cambridge, U.K.
+tex.isbn: 0521232023
+tex.publisher: Cambridge University Press},
+	keywords = {Status, Settlement patterns, Territorial hierarchy, Theoretical orientation in research and its results, Gift giving, and prestige, role, Organization and analysis of results of research, Prehistory, Trobriand Islanders, Trobriands},
+	pages = {29--72},
+	annote = {Accessed on: 2019-12-03},
+	annote = {Bibliography will be found in 36: Leach, Information Sources Listed in Other Works (113)},
+	annote = {[by] Geoffrey J. Irwin},
+	annote = {Process; sent to xerox 11/7/91; sent to analysis 1/10/92 (45 text p.); analysis completed 6/15/92 (45 text p.)}
+}
+
+@incollection{nf06-061,
+	address = {Toronto, Ont.},
+	title = {Blackfoot indians},
+	isbn = {0-7710-6510-8},
+	url = {https://ehrafworldcultures.yale.edu/document?id=nf06-061},
+	abstract = {This document presents a summary sketch of Blackfoot ethnography dating from pre-contact days (ca. 1600s) to the 1970s. The work provides information on the environment and economy, social and political organization, religion, the Sun Dance ceremonial, myths and legends, warfare, family life, culture history, the fur trade, treaties and reservations, and recent trends in cultural development. This study provides the reader with an excellent overview of Blackfoot society without getting too specific on details.},
+	language = {English},
+	booktitle = {Native peoples : the canadian experience},
+	publisher = {McClelland and Stewart},
+	author = {Dempsey, Hugh Aylmer},
+	year = {1986},
+	keywords = {Blackfoot, Community structure, External trade, Organized ceremonial, Personal names, Public welfare, Sacred objects and places, Siksika Indians, Sociocultural trends, Warfare},
+	pages = {404--435},
+	annote = {Accessed on: 2019-12-03},
+	annote = {form SML 5/97; copied 6/97, CE; pages: 34; to analysis 6/97; analysis completed 7/21/97; 34 text pages},
+	annote = {Hugh A. Dempsey},
+	annote = {Includes bibliographical references (p. 434-435)}
+}
+
+@article{oc06-034,
+	title = {Warriors and weavers: {A} study of gender relations among the iban of sarawak},
+	volume = {vol. 1},
+	issn = {1055-7792},
+	url = {https://ehrafworldcultures.yale.edu/document?id=oc06-034},
+	abstract = {The male prestige system is discussed in the historical context of headhunting in order '…to determine whether it is 'exclusively male' and to analyze women's relationship to this male prestige system'…(p. 233). Further discussion focuses on the significance of weaving as a complementary index of prestige for women. Gender construction is then examined from a different perspective that may be more appropriate in the light of the more 'traditional' values indicated as part of the prestige system mentioned above. In this analysis two complementary categories derived from the organization of space in the longhouse are examined. These categories represent the RUAI or veranda, and the BILIK or family room, identified respectively with the male and female gender. Mashman concludes that while men assume dominance in formal power and public life in Iban society, they always remain on the fringe of longhouse life, for it is the women, with their ritual expertise and specialized knowledge of rice cultivation, who are central to the longhouse as a point of stability in Iban consciousness (p. 263).},
+	language = {English},
+	author = {Mashman, Valerie},
+	year = {1991},
+	note = {tex.address: Williamsburg, Va.
+tex.isbn: 0962956805
+tex.publisher: The Borneo Research Council, Inc., Department of Anthropology, College of William and Mary},
+	keywords = {Status, Cereal agriculture, Ethos, Iban, Ibans (Bornean people), Aftermath of combat, and prestige, Division of labor by gender, Dwellings, Gender status, Instigation of war, role, Travel, Woven and other interworked fabrics},
+	pages = {231--270},
+	annote = {Accessed on: 2019-12-03},
+	annote = {Includes bibliographical references (p. 265-270)},
+	annote = {Purchased ; to analysis 9/93 (41 text p.); analysis completed 10/12/93 (42 text p.)},
+	annote = {Valerie Mashman}
+}
+
+
+@article{aa01-062,
+	title = {Reciprocity and korean society: an ethnography of hasami},
+	url = {https://ehrafworldcultures.yale.edu/document?id=aa01-062},
+	abstract = {Chun examines the various kinds of reciprocal exchanges which help to maintain egalitarian social relations in a small fishing and farming community on the island of Chindo, which is off the southwest coast of Korea. He looks at exchanges associated with weddings, ancestral rituals, kinship groups and voluntary associations. He also examines the exchanges between the village community and the more hierarchical ordered external society which includes merchant-buyers, government officials, and military and police officers. According to Chu, the exchanges between villagers and outsiders are not as balanced or diverse as they are in the village and tend to put villagers in a state of dependency. Although gifts to military and police officers may appear as bribes, their intended purpose is to establish a friendly relationship, so that the officers can recognize and accommodate villagers' interests. By extending credit to villagers, merchants and government cooperatives have shackled villagers with debt, which undermines their capacity to exchange with their fellow villagers. The book contains an extensive glosary and transcripts of two voluntary association meetings.},
+	language = {English},
+	number = {no. 6},
+	author = {Chŏn, Kyŏng-su},
+	year = {1984},
+	note = {tex.address: Seoul
+tex.publisher: Seoul National University Press},
+	keywords = {Clans, Cult of the dead, Gift giving, Insurance, Korea, Koreans, Lineages, Mutual aid, Political intrigue},
+	pages = {xviii, 232},
+	annote = {Accessed on: 2019-12-03},
+	annote = {from SML 12/96; copied 12/96;pages: 251; to analysis 2/27/97; analysis completed 4/10/97; 251 text pages.},
+	annote = {Includes bibliographical references (p. 221-226) and index},
+	annote = {Kyung-soo Chun},
+	annote = {Revision of author's thesis (Ph.D.) – University of Minnesota, 1982}
+}
+
+@article{mo04-021,
+	title = {Consuetudinary law of northern somalia (mijirtein)},
+	volume = {Vol. 2},
+	url = {https://ehrafworldcultures.yale.edu/document?id=mo04-021},
+	abstract = {This article, dealing with various aspects of the customary law of the Migiurtini Somali, was written by Cerulli in 1916 on the basis of data gathered by him in Naples from Migiurtini Somali informants retained for that purpose. Cerulli organized the data into four categories; namely laws related to the person, laws related to the 'gens', laws of the family, and patrimonial laws. Each of these divisions is discussed in depth. Ethnographic information on birth, sex status, physical infirmity, slavery, the low castes, caravan trade, marriage, the Sultan and his role in the society, totemism, tribal divisions, sanctions, care of minors, kin relations, property, and succession is included.},
+	language = {English},
+	author = {Cerulli, Enrico},
+	year = {1959},
+	note = {tex.address: Roma
+tex.publisher: A Cura dell'Amministrazione Fiduciaria Italiana della Somalia ; Instituto poligrafico dello Stato P.V.},
+	keywords = {Legal norms, Somali, Somalis},
+	pages = {HRAF Ms: 121 [original: 1--74, 382--384 ]},
+	annote = {Accessed on: 2019-12-03},
+	annote = {Enrico Cerulli},
+	annote = {Includes bibliographical references},
+	annote = {The original Italian text is not included},
+	annote = {Translated for the HRAF files by Piero Biancani},
+	annote = {Translation of: Il diritto consuetudinario della Somalia Settentrionale (Migiurtini).}
+}
+
+@book{az02-001,
+	address = {Cambridge},
+	title = {Andaman islanders: {A} study in social anthropology},
+	url = {https://ehrafworldcultures.yale.edu/document?id=az02-001},
+	abstract = {This work is considered the 'classic ethnography' of the Andaman Islanders. The book contains information on social organization, ceremony, religious and magical beliefs, mythology, and material culture. In addition, Radcliffe-Brown includes a functional interpretation of the customs, beliefs, and myths of the people. The final portion of the book attempts, in part, to deduce something about the archaic culture of the Andaman Islands by comparing their material culture with that of similar groups.},
+	language = {English},
+	publisher = {Cambridge University Press},
+	author = {Radcliffe-Brown, A. R. (Alfred Reginald)},
+	year = {1922},
+	keywords = {Andamanese (Indic people), Andamans, Culture summary},
+	annote = {A. R. Radcliffe-Brown},
+	annote = {Accessed on: 2019-12-03}
+}
+
 @article{weber_distribution_1978,
 	title = {The distribution of power within the political community: {Class}, status, party},
 	volume = {2},
